sample project with sample class for fibonacci sequence calculations

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,7 @@
 file.reference.XML-lib=lib
 file.reference.XML-spec=spec
 file.reference.XML-test=test
-main.file=
+main.file=main.rb
 platform.active=Ruby
 source.encoding=UTF-8
 spec.dir=${file.reference.XML-spec}
